Version 9.1 Fixed issue when at some point of width is scaled in the artist tab, the selected artists is slighly shifted off from the center position, now it's centered at every width that the website window is stretched

--- a/Styles/artists.scss
+++ b/Styles/artists.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   flex: 1;
   background-color: rgba(173, 216, 230, 0);
-  overflow: hidden scroll;
+  overflow-x: hidden;
   font-size: inherit;
   transition: padding ease-out 0.5s;
 }
